@@ -1,110 +1,39 @@
-//package org.vomzersocials.user.springSecurity;
-//
-//import org.springframework.context.annotation.Bean;
-//import org.springframework.context.annotation.Configuration;
-//import org.springframework.lang.NonNull;
-//import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
-//import org.springframework.security.config.web.server.ServerHttpSecurity;
-//import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-//import org.springframework.security.web.server.SecurityWebFilterChain;
-//import org.springframework.security.web.server.context.NoOpServerSecurityContextRepository;
-//import org.springframework.security.config.web.server.SecurityWebFiltersOrder;
-//import org.springframework.web.cors.reactive.CorsWebFilter;
-//import org.springframework.web.cors.CorsConfiguration;
-//import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
-//import org.springframework.http.HttpMethod;
-//
-//import java.util.List;
-//
-//@Configuration
-//@EnableWebFluxSecurity
-//public class SecurityConfig {
-//
-//    private final org.springframework.security.web.server.ServerAuthenticationEntryPoint entryPoint;
-//    private final JwtUtil jwtUtil;
-//
-//    public SecurityConfig(org.springframework.security.web.server.ServerAuthenticationEntryPoint entryPoint, JwtUtil jwtUtil) {
-//        this.entryPoint = entryPoint;
-//        this.jwtUtil = jwtUtil;
-//    }
-//
-//    @Bean
-//    public @NonNull SecurityWebFilterChain securityWebFilterChain(
-//            ServerHttpSecurity http, JwtAuthenticationFilter jwtFilter) {
-//        http
-//                .csrf(ServerHttpSecurity.CsrfSpec::disable)
-//                .exceptionHandling(ex -> ex.authenticationEntryPoint(entryPoint))
-//                .securityContextRepository(NoOpServerSecurityContextRepository.getInstance())
-//                .authorizeExchange(auth -> auth
-//                        .pathMatchers(HttpMethod.GET, "/", "/index.html", "/static/**", "/favicon.ico").permitAll()
-//                        .pathMatchers(HttpMethod.OPTIONS).permitAll()
-//                        .pathMatchers("/api/auth/**").permitAll()
-//                        .pathMatchers("/api/auth/admin/**").hasAuthority("ZKSocials")
-//                        .anyExchange().authenticated()
-//                )
-//                .addFilterAt(jwtFilter, SecurityWebFiltersOrder.AUTHENTICATION);
-//
-//        return http.build();
-//    }
-//
-//    @Bean
-//    public CorsWebFilter corsWebFilter() {
-//        CorsConfiguration config = new CorsConfiguration();
-//        config.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:5174"));
-//        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//        config.setAllowedHeaders(List.of("*"));
-//        config.setAllowCredentials(true);
-//
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", config);
-//
-//        return new CorsWebFilter(source);
-//    }
-//
-//    @Bean
-//    public @NonNull JwtAuthenticationFilter jwtAuthenticationFilter() {
-//        return new JwtAuthenticationFilter(jwtUtil);
-//    }
-//
-//    @Bean
-//    public @NonNull BCryptPasswordEncoder passwordEncoder() {
-//        return new BCryptPasswordEncoder();
-//    }
-//}
-
 package org.vomzersocials.user.springSecurity;
 
+
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.lang.NonNull;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
+import org.springframework.security.config.web.server.SecurityWebFiltersOrder;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.server.SecurityWebFilterChain;
 import org.springframework.security.web.server.context.NoOpServerSecurityContextRepository;
-import org.springframework.security.config.web.server.SecurityWebFiltersOrder;
-import org.springframework.web.cors.reactive.CorsWebFilter;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 import org.springframework.http.HttpMethod;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.reactive.CorsWebFilter;
+import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebFluxSecurity
 public class SecurityConfig {
 
-    private final org.springframework.security.web.server.ServerAuthenticationEntryPoint entryPoint;
+    private final CustomAuthenticationEntryPoint entryPoint;
     private final JwtUtil jwtUtil;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    public SecurityConfig(org.springframework.security.web.server.ServerAuthenticationEntryPoint entryPoint, JwtUtil jwtUtil) {
+    public SecurityConfig(CustomAuthenticationEntryPoint entryPoint, JwtUtil jwtUtil, JwtAuthenticationFilter jwtAuthenticationFilter) {
         this.entryPoint = entryPoint;
         this.jwtUtil = jwtUtil;
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
     }
 
     @Bean
-    public @NonNull SecurityWebFilterChain securityWebFilterChain(
-            ServerHttpSecurity http, JwtAuthenticationFilter jwtFilter) {
+    public SecurityWebFilterChain securityWebFilterChain(ServerHttpSecurity http) {
         http
                 .csrf(ServerHttpSecurity.CsrfSpec::disable)
                 .exceptionHandling(ex -> ex.authenticationEntryPoint(entryPoint))
@@ -112,36 +41,32 @@ public class SecurityConfig {
                 .authorizeExchange(auth -> auth
                         .pathMatchers(HttpMethod.GET, "/", "/index.html", "/static/**", "/favicon.ico").permitAll()
                         .pathMatchers(HttpMethod.OPTIONS).permitAll()
-                        .pathMatchers("/api/auth/**").permitAll()
-                        .pathMatchers("/api/auth/admin/**").hasAuthority("ZKSocials")
+                        .pathMatchers("/api/auth/register/**", "/api/auth/login/**", "/api/auth/refresh-token", "/api/auth/password-reset/**", "/api/health").permitAll()
+                        .pathMatchers("/api/admin/**").hasAuthority("ZKSocials")
                         .anyExchange().authenticated()
                 )
-                .addFilterAt(jwtFilter, SecurityWebFiltersOrder.AUTHENTICATION);
-
+                .addFilterAt(jwtAuthenticationFilter, SecurityWebFiltersOrder.AUTHENTICATION);
         return http.build();
     }
 
     @Bean
-    public CorsWebFilter corsWebFilter() {
+    public CorsWebFilter corsWebFilter(@Value("${cors.allowed-origins:http://localhost:5173,http://localhost:5174}") String[] allowedOrigins) {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:5174"));
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins));
+        config.addAllowedOrigin("http://localhost:5173, http://localhost:5174");
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-
         return new CorsWebFilter(source);
     }
 
     @Bean
-    public @NonNull JwtAuthenticationFilter jwtAuthenticationFilter() {
-        return new JwtAuthenticationFilter(jwtUtil);
-    }
-
-    @Bean
-    public @NonNull BCryptPasswordEncoder passwordEncoder() {
+    public BCryptPasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
+
 }
+
+
